[tool.poetry]
name = "workflow1"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"